--- a/index.html
+++ b/index.html
@@ -7,21 +7,16 @@
     <body>
         <div class="container">
             <div >
-                <h1 class = "header_text">Akshat Wants to give this heart to Neeti. Do you accept it?</h1>
+                <h1 class = "header_text">Heyy!! Neeti, So Akshat told me you're a fan of mine. Is that right?</h1>
             </div>
             <div class="gif_container">
-                <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExcDdtZ2JiZDR0a3lvMWF4OG8yc3p6Ymdvd3g2d245amdveDhyYmx6eCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/cLS1cfxvGOPVpf9g3y/giphy.gif" alt="Cute animated illustration">
+                <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExZG8xYncyNzdmeDNzZGZsYXdjNm0zaXM0eW1penBpeTMyMmRvZXZyeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/BasHahEpUmSMlt9hgN/giphy.gif">
             </div>
             <div class = "buttons">
                 <button class="btn" id = "yesButton" onclick="nextPage()">Yes</button>
-                <button class="btn" id="noButton" onmouseover="moveButton()" onclick="nextPage2()">No</button>
                 <script>
                     function nextPage() {
                         window.location.href = "yes.html";
-                    }
-
-                    function nextPage2() {
-                        window.location.href = "no.html";
                     }
 
                     function moveButton() {
