--- a/yes.html
+++ b/yes.html
@@ -7,10 +7,10 @@
     <body>
         <div class="container">
             <div >
-                <h1 class = "header_text">Yeeeyyyy!!</h1>
+                <h1 class = "header_text">LET'S GROVEE BABYY!!</h1>
             </div>
             <div class="gif_container">
-                <img src="https://media0.giphy.com/media/T86i6yDyOYz7J6dPhf/giphy.gif" alt="Cute animated illustration">
+                <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExNTRxc3Rrd2Ywcm1mcWdkeHZzbjBuejlyM3d4cXNiYmI0NWgzYjF5MSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/TF6ZSOZWtXVBOeMIc6/giphy.gif" alt="Cute animated illustration">
             </div>
         </div>
 
