--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
             </div>
             <div class = "buttons">
                 <button class="btn" id = "yesButton" onclick="nextPage()">Yes</button>
+                <button class="btn" id="noButton" onmouseover="moveButton()" onclick="nextPage2()">Nah! I was kidding</button>
                 <script>
                     function nextPage() {
                         window.location.href = "yes.html";
+                    }
+                    function nextPage2() {
+                        window.location.href = "no.html";
                     }
 
                     function moveButton() {
